@@ -3,6 +3,12 @@ JavaFX SIMPLE UI Application reads and analyses provided .CSV format historical 
 
 ## Running Instructions:
 
+1. Load the CW folder Project and set up VM Options in Run Configurations:
 
+<b>--module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml </b>
+
+2. Specify the Working directory in Run Configuration, where the CW folder is located
+
+3. Locate and add the JavaFX Library
 
 
